--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+body{
+  background-color: #000000;
+  color: #ffffff;
+}
+@layer components {
+  .btn{
+    @apply inline-flex justify-center items-center;
+    @apply px-4 py-2 rounded-lg cursor-pointer;
+  }
+  .btn-primary{
+    @apply bg-purple-500 text-white hover:bg-purple-600;
+  }
+  .btn-secondary{
+    @apply bg-gray-500 text-white hover:bg-gray-600;
+  }
+  .btn-danger{
+    @apply bg-red-500 text-white hover:bg-red-600;
+  }
+  .input{
+    @apply bg-white  border-amber-100 rounded-md px-2 py-2;
+    @apply focus:outline-none focus:ring-4 focus:ring-purple-500;
+    @apply text-purple-950
+  }
+  .task{
+    @apply ring-5 ring-purple-500 bg-purple-100/10;
+    @apply p-4 rounded-lg mb-4;
+  }
+}
